--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,38 +2,33 @@
   <h2 class="title">Sign In</h2>
   <small class="form-text sub-title">Hello! Sign in with your email</small>
   <form (ngSubmit)="login()" #form="ngForm">
-    <div *ngIf="error && !submitted" class="alert alert-danger" role="alert">
-      <div><strong>Oh snap!</strong></div>
+    <div *ngIf="!submitted && error" class="alert alert-danger" role="alert">
+      <div><strong>Authentication failed</strong></div>
     </div>
     <div class="form-group">
       <label for="input-email" class="sr-only">Email address</label>
       <input name="email" [formControl]="email" id="input-email" class="form-control"
              placeholder="Email address"
              [class.form-control-success]="email.touched && email.valid"
-             [class.form-control-danger]="email.invalid && email.touched"
+             [class.form-control-danger]="email.touched && email.invalid"
              autofocus>
-      <small class="form-text error" *ngIf="email.invalid && email.touched">
+      <small class="form-text error" *ngIf="email.touched && email.invalid">
         Correct email is required!
       </small>
     </div>
     <div class="form-group">
       <label for="input-password" class="sr-only">Password</label>
-      <input name="password" [formControl]="password" type="password" id="input-password"
-             class="form-control" placeholder="Password"
-             [class.form-control-danger]="password.invalid && password.touched">
-      <!--<small class="form-text error" *ngIf="password.invalid && password.touched && password.errors?.required">-->
-        <!--Password is required!-->
-      <!--</small>-->
-      <!--<small-->
-        <!--class="form-text error"-->
-        <!--*ngIf="password.invalid && password.touched && (password.errors?.minlength || password.errors?.maxlength)">-->
-        <!--Password should contains-->
-        <!--from {{ getConfigValue('forms.validation.password.minLength') }}-->
-        <!--to {{ getConfigValue('forms.validation.password.maxLength') }}-->
-        <!--characters-->
-      <!--</small>-->
+      <input type="password"
+             name="password" [formControl]="password"  id="input-password" class="form-control"
+             placeholder="Password"
+             [class.form-control-success]="password.touched && password.valid"
+             [class.form-control-danger]="password.touched && password.invalid">
+      <small class="form-text error" *ngIf="password.touched && password.invalid">
+        Password is required!
+      </small>
     </div>
-    <button type="submit" class="btn btn-block btn-hero-success" [class.btn-pulse]="submitted">
+    <button type="submit" class="btn btn-block btn-hero-success"
+            [disabled]="submitted || email.invalid || password.invalid">
       Sign In
     </button>
   </form>
