--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,6 +1,5 @@
 <div class="header-container"
-     [class.left]="position === 'normal'"
-     [class.right]="position === 'inverse'">
+     [class.left]="position === 'normal'">
   <div class="logo-containter">
     <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-menu"></i></a>
     <div class="logo" (click)="goToHome()">Complaint<span>System</span></div>
@@ -11,15 +10,8 @@
 <nb-actions
   size="medium"
   class="header-container"
-  [class.right]="position === 'normal'"
-  [class.left]="position === 'inverse'">
-  <nb-action icon="nb-grid-b" class="toggle-layout" (click)="toggleSettings()"></nb-action>
+  [class.right]="position === 'normal'">
   <nb-action>
-    <nb-user [menu]="userMenu" [name]="user?.name" [picture]="user?.picture"></nb-user>
-  </nb-action>
-  <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
-  <nb-action class="control-item" icon="nb-email"></nb-action>
-  <nb-action class="control-item">
-    <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
+    <nb-user [menu]="userMenu" name="Your Account"></nb-user>
   </nb-action>
 </nb-actions>
