--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,78 +1,55 @@
-register
-<!--<nb-auth-block>-->
-  <!--<h2 class="title">Sign Up</h2>-->
-  <!--<form (ngSubmit)="register()" #form="ngForm">-->
-    <!--<div *ngIf="showMessages.error && errors && errors.length > 0 && !submitted"-->
-         <!--class="alert alert-danger" role="alert">-->
-      <!--<div><strong>Oh snap!</strong></div>-->
-      <!--<div *ngFor="let error of errors">{{ error }}</div>-->
-    <!--</div>-->
-    <!--<div *ngIf="showMessages.success && messages && messages.length > 0 && !submitted"-->
-         <!--class="alert alert-success" role="alert">-->
-      <!--<div><strong>Hooray!</strong></div>-->
-      <!--<div *ngFor="let message of messages">{{ message }}</div>-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="input-email" class="sr-only">Email address</label>-->
-      <!--<input name="email" [(ngModel)]="user.email" id="input-email" #email="ngModel"-->
-             <!--class="form-control" placeholder="Email address" pattern=".+@.+\..+"-->
-             <!--[class.form-control-danger]="email.invalid && email.touched"-->
-             <!--[required]="getConfigValue('forms.validation.email.required')">-->
-      <!--<small class="form-text error" *ngIf="email.invalid && email.touched && email.errors?.required">-->
-        <!--Email is required!-->
-      <!--</small>-->
-      <!--<small class="form-text error"-->
-             <!--*ngIf="email.invalid && email.touched && email.errors?.pattern">-->
-        <!--Email should be the real one!-->
-      <!--</small>-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="input-password" class="sr-only">Password</label>-->
-      <!--<input name="password" [(ngModel)]="user.password" type="password" id="input-password"-->
-             <!--class="form-control" placeholder="Password" #password="ngModel"-->
-             <!--[class.form-control-danger]="password.invalid && password.touched">-->
-      <!--<small class="form-text error" *ngIf="password.invalid && password.touched && password.errors?.required">-->
-        <!--Password is required!-->
-      <!--</small>-->
-      <!--<small-->
-        <!--class="form-text error"-->
-        <!--*ngIf="password.invalid && password.touched && (password.errors?.minlength || password.errors?.maxlength)">-->
-        <!--Password should contains-->
-        <!--from {{ getConfigValue('forms.validation.password.minLength') }}-->
-        <!--to {{ getConfigValue('forms.validation.password.maxLength') }}-->
-        <!--characters-->
-      <!--</small>-->
-    <!--</div>-->
-    <!--<div class="form-group">-->
-      <!--<label for="input-re-password" class="sr-only">Repeat password</label>-->
-      <!--<input-->
-        <!--name="rePass" [(ngModel)]="user.confirmPassword" type="password" id="input-re-password"-->
-        <!--class="form-control" placeholder="Confirm Password" #rePass="ngModel"-->
-        <!--[class.form-control-danger]="(rePass.invalid || password.value != rePass.value) && rePass.touched"-->
-        <!--[required]="getConfigValue('forms.validation.password.required')">-->
-      <!--<small class="form-text error"-->
-             <!--*ngIf="rePass.invalid && rePass.touched && rePass.errors?.required">-->
-        <!--Password confirmation is required!-->
-      <!--</small>-->
-      <!--<small-->
-        <!--class="form-text error"-->
-        <!--*ngIf="rePass.touched && password.value != rePass.value && !rePass.errors?.required">-->
-        <!--Password does not match the confirm password.-->
-      <!--</small>-->
-    <!--</div>-->
+<nb-auth-block>
+  <h2 class="title">Sign Up</h2>
+  <form (ngSubmit)="register()" #form="ngForm">
+    <div *ngIf="false"
+         class="alert alert-danger" role="alert">
+      <div><strong>Oh snap!</strong></div>
+    </div>
+    <div *ngIf="false"
+         class="alert alert-success" role="alert">
+      <div><strong>Hooray!</strong></div>
+    </div>
+    <div class="form-group">
+      <label for="input-email" class="sr-only">Email address</label>
+      <input name="email" [formControl]="email" id="input-email"
+             class="form-control" placeholder="Email address"
+             [class.form-control-danger]="email.invalid && email.touched">
+      <small class="form-text error" *ngIf="email.invalid && email.touched">
+        Email is required!
+      </small>
+      <small class="form-text error"
+             *ngIf="email.invalid && email.touched">
+        Email should be the real one!
+      </small>
+    </div>
+    <div class="form-group">
+      <label for="input-password" class="sr-only">Password</label>
+      <input name="password" [formControl]="password" type="password" id="input-password"
+             class="form-control" placeholder="Password"
+             [class.form-control-danger]="password.invalid && password.touched">
+      <small class="form-text error" *ngIf="password.invalid && password.touched">
+        Password is required!
+      </small>
+    </div>
+    <div class="form-group">
+      <label for="input-re-password" class="sr-only">Repeat password</label>
+      <input
+        name="rePass" [formControl]="confirmPassword" type="password" id="input-re-password"
+        class="form-control" placeholder="Confirm Password">
+    </div>
     <!--<div class="form-group accept-group col-sm-12" *ngIf="getConfigValue('forms.register.terms')">-->
       <!--&lt;!&ndash;<nb-checkbox name="terms" [(ngModel)]="user.terms" [required]="getConfigValue('forms.register.terms')">&ndash;&gt;-->
         <!--&lt;!&ndash;Agree to <a href="#" target="_blank"><strong>Terms & Conditions</strong></a>&ndash;&gt;-->
       <!--&lt;!&ndash;</nb-checkbox>&ndash;&gt;-->
     <!--</div>-->
-    <!--<button [disabled]="submitted || !form.valid" class="btn btn-block btn-hero-success"-->
-            <!--[class.btn-pulse]="submitted">-->
-      <!--Register-->
-    <!--</button>-->
-  <!--</form>-->
-  <!--<div class="links">-->
-    <!--<small class="form-text">-->
-      <!--Already have an account? <a routerLink="../login"><strong>Sign in</strong></a>-->
-    <!--</small>-->
-  <!--</div>-->
-<!--</nb-auth-block>-->
+    <button [disabled]="submitted || !form.valid" class="btn btn-block btn-hero-success"
+            [class.btn-pulse]="submitted">
+      Register
+    </button>
+  </form>
+  <div class="links">
+    <small class="form-text">
+      Already have an account? <a routerLink="../login"><strong>Sign in</strong></a>
+    </small>
+  </div>
+</nb-auth-block>
