Basic components almost finished #2

--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -113,3 +113,10 @@
   }
 }
 
+@include nb-install-component() {
+  .nb-menu {
+    color: nb-theme(color-fg-highlight);
+    font-weight: 900;
+  }
+}
+
