--- a/src/app/pages/complaints/add-complaint/add-complaint.component.html
+++ b/src/app/pages/complaints/add-complaint/add-complaint.component.html
@@ -2,53 +2,89 @@
   <nb-card>
     <nb-card-header>Add New Complaint</nb-card-header>
     <nb-card-body>
-      <form class="form-horizontal">
+      <form class="form-horizontal" (ngSubmit)="addComplaint()" #form="ngForm">
         <div class="form-group row">
           <label for="productDescription" class="col-sm-3 form-control-label">Product description</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="productDescription" placeholder="Product description">
+            <textarea rows="5" class="form-control"
+                      id="productDescription" placeholder="Product description"
+                      [formControl]="productDescription"
+                      [class.form-control-success]="productDescription.touched && productDescription.valid"
+                      [class.form-control-danger]="productDescription.touched && productDescription.invalid"
+                      autofocus></textarea>
           </div>
         </div>
         <div class="form-group row">
           <label for="invoiceNumber" class="col-sm-3 form-control-label">Invoice number</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="invoiceNumber" placeholder="Invoice number">
+            <input type="text" class="form-control"
+                   id="invoiceNumber" placeholder="Invoice number"
+                   [formControl]="invoiceNumber"
+                   [class.form-control-success]="invoiceNumber.touched && invoiceNumber.valid"
+                   [class.form-control-danger]="invoiceNumber.touched && invoiceNumber.invalid">
           </div>
         </div>
+        <!--TODO-->
         <div class="form-group row">
           <label for="purchaseDate" class="col-sm-3 form-control-label">Purchase date</label>
           <div class="col-sm-9">
-            <input type="date" class="form-control" id="purchaseDate" placeholder="Purchase date">
+
+            <input type="date" class="form-control"
+                   id="purchaseDate" placeholder="Purchase date"
+                   [formControl]="purchaseDate"
+                   [class.form-control-success]="purchaseDate.touched && purchaseDate.valid"
+                   [class.form-control-danger]="purchaseDate.touched && purchaseDate.invalid">
           </div>
         </div>
+        <!--         <ng-datepicker [(ngModel)]="date" [options]="options"></ng-datepicker>-->
         <div class="form-group row">
           <label for="price" class="col-sm-3 form-control-label">Price</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="price" placeholder="Price">
+            <input type="text" class="form-control"
+                   id="price" placeholder="Price"
+                   [formControl]="price"
+                   [class.form-control-success]="price.touched && price.valid"
+                   [class.form-control-danger]="price.touched && price.invalid">
           </div>
         </div>
         <div class="form-group row">
           <label for="iban" class="col-sm-3 form-control-label">Iban</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="iban" placeholder="Iban">
+            <input type="text" class="form-control"
+                   id="iban" placeholder="Iban"
+                   [formControl]="iban"
+                   [class.form-control-success]="iban.touched && iban.valid"
+                   [class.form-control-danger]="iban.touched && iban.invalid">
           </div>
         </div>
         <div class="form-group row">
           <label for="complaintReason" class="col-sm-3 form-control-label">Complaint reason</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="complaintReason" placeholder="Complaint reason">
+            <textarea rows="6" class="form-control"
+                      id="complaintReason" placeholder="Complaint reason"
+                      [formControl]="complaintReason"
+                      [class.form-control-success]="complaintReason.touched && complaintReason.valid"
+                      [class.form-control-danger]="complaintReason.touched && complaintReason.invalid"></textarea>
           </div>
         </div>
         <div class="form-group row">
           <label for="claim" class="col-sm-3 form-control-label">Claim</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="claim" placeholder="Claim">
+            <input type="text" class="form-control"
+                   id="claim" placeholder="Claim"
+                   [formControl]="claim"
+                   [class.form-control-success]="claim.touched && claim.valid"
+                   [class.form-control-danger]="claim.touched && claim.invalid">
           </div>
         </div>
         <div class="form-group row">
           <div class="offset-sm-3 col-sm-9">
             <div class="checkbox">
-              <nb-checkbox>Data processing permission</nb-checkbox>
+              <nb-checkbox class="form-control" id="dataProcessingPermission"
+                           [formControl]="dataProcessingPermission"
+                           [class.form-control-success]="dataProcessingPermission.touched && dataProcessingPermission.valid"
+                           [class.form-control-danger]="dataProcessingPermission.touched && dataProcessingPermission.invalid">
+                Data processing permission</nb-checkbox>
             </div>
           </div>
         </div>
