--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,9 +1,11 @@
 <nb-auth-block>
   <h2 class="title">Sign Up</h2>
   <form (ngSubmit)="register()" #form="ngForm">
-    <div *ngIf="false"
-         class="alert alert-danger" role="alert">
-      <div><strong>Oh snap!</strong></div>
+    <div *ngIf="!submitted && success" class="alert alert-success" role="alert">
+      <div><strong>Successful register</strong></div>
+    </div>
+    <div *ngIf="!submitted && error" class="alert alert-danger" role="alert">
+      <div><strong>Register failed</strong></div>
     </div>
     <div class="form-group">
       <label for="input-email" class="sr-only">Email address</label>
@@ -23,7 +25,7 @@
              [class.form-control-success]="password.touched && password.valid"
              [class.form-control-danger]="password.touched && password.invalid">
       <small class="form-text error" *ngIf="password.touched && password.invalid">
-        Password is required!
+        Password (5 to 20 characters) is required!
       </small>
     </div>
     <div class="form-group">
@@ -32,13 +34,17 @@
              class="form-control" placeholder="Confirm Password"
              [class.form-control-success]="confirmPassword.touched && confirmPassword.valid"
              [class.form-control-danger]="confirmPassword.touched && confirmPassword.invalid">
-      <small class="form-text error" *ngIf="password.touched && password.invalid">
-        Password is required!
+      <small class="form-text error" *ngIf="confirmPassword.touched && confirmPassword.invalid">
+        Password (5 to 20 characters) is required!
+      </small>
+      <small class="form-text error" *ngIf="password.touched && password.valid &&
+                                            confirmPassword.touched && confirmPassword.valid &&
+                                            passwords.invalid">
+        Passwords must be equal!
       </small>
     </div>
-    <!-- tu kom -->
     <button type="submit" class="btn btn-block btn-hero-success"
-            [disabled]="submitted || !form.valid">
+            [disabled]="submitted || email.invalid || passwords.invalid">
       Register
     </button>
   </form>
