--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,7 +5,7 @@
       <div><strong>Successful register</strong></div>
     </div>
     <div *ngIf="!submitted && error" class="alert alert-danger" role="alert">
-      <div><strong>Register failed</strong></div>
+      <div><strong>Register failed (probably account exists)</strong></div>
     </div>
     <div class="form-group">
       <label for="input-email" class="sr-only">Email address</label>
