--- a/src/app/pages/profile/customer-data/customer-data.component.html
+++ b/src/app/pages/profile/customer-data/customer-data.component.html
@@ -10,6 +10,12 @@
       </button>
     </nb-card-header>
     <nb-card-body>
+      <div *ngIf="!submitted && success" class="alert alert-success" role="alert">
+        <div><strong>Customer Data successfully updated</strong></div>
+      </div>
+      <div *ngIf="!submitted && error" class="alert alert-danger" role="alert">
+        <div><strong>Error occurred while Customer Data updating</strong></div>
+      </div>
       <form class="form-horizontal" (ngSubmit)="updateCustomer()" #form="ngForm">
         <div class="form-group row">
           <label for="customerId" class="col-sm-3 form-control-label">Customer ID</label>
@@ -45,7 +51,7 @@
           <label for="streetName" class="col-sm-3 form-control-label">Street Name</label>
           <div class="col-sm-9">
             <input type="text" class="form-control"
-                   id="streetName" placeholder="Strret Name"
+                   id="streetName" placeholder="Street Name"
                    [formControl]="streetName"
                    [class.form-control-success]="streetName.valid"
                    [class.form-control-danger]="streetName.invalid">
@@ -96,7 +102,7 @@
             Data processing permission
           </nb-checkbox>
         </div>
-        <div class="form-group row">
+        <div *ngIf="editMode" class="form-group row">
           <div class="offset-sm-3 col-sm-9">
             <button type="submit" class="btn btn-hero-success" [disabled]="!isFormValid()">
               Update Customer Data
