--- a/src/app/pages/profile/profile-view/profile-view.component.html
+++ b/src/app/pages/profile/profile-view/profile-view.component.html
@@ -1,1 +1,2 @@
 <customer-data *ngIf="userRole == 'CUSTOMER'"></customer-data>
+<employee-data *ngIf="userRole == 'CONSULTANT' || userRole == 'ADMIN'"></employee-data>
